--- a/deskover-dashboard-website/src/app/modules/login/login.component.html
+++ b/deskover-dashboard-website/src/app/modules/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="card card-outline card-primary">
   <div class="card-header text-center" style="background-color: fff;">
     <a [routerLink]="['/']" class="h1">
-      <img width="872" class="img-fluid" src="assets/img/logo/logo.png">
+      <img width="872" class="img-fluid" src="assets/images/logo/logo.png">
     </a>
   </div>
   <div class="card-body">
