--- a/deskover-dashboard-website/src/app/pages/promotion/promotion.component.html
+++ b/deskover-dashboard-website/src/app/pages/promotion/promotion.component.html
@@ -96,7 +96,7 @@
           <input type="text" id="discountTime" name="discountTime" placeholder="Ngày bắt đầu - Ngày kết thúc"
                  class="form-control"
                  placement="top" [bsConfig]="bsConfig" #discountTime="bsDaterangepicker" bsDaterangepicker
-                 [(ngModel)]="discount.discountTime">
+                 [(ngModel)]="bsRangeValue">
         </div>
       </div>
     </form>
