--- a/deskover-dashboard-website/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
@@ -1,12 +1,14 @@
 <!-- Brand Logo -->
 <a [routerLink]="['/']" class="brand-link text-decoration-none">
     <img
-        src="assets/img/logo/logo-icon.png"
+        src="assets/images/logo/logo-icon.png"
         alt="Deskover"
         class="brand-image img-circle elevation-3"
         style="opacity: 0.8"
     />
-    <span class="brand-text fw-bolder text-primary text-uppercase">Deskover</span>
+    <span class="brand-text text-center">
+      <img src="assets/images/logo/logo.png" width="100" class="img-fluid" alt="logo">
+    </span>
 </a>
 
 <!-- Sidebar -->
@@ -15,7 +17,7 @@
     <!--<div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
             <img
-                [src]="'assets/img/avatar/default-profile.png'"
+                [src]="'assets/images/avatar/default-profile.png'"
                 class="img-circle elevation-2"
                 alt="User Image"
             />
