Update Login UI

--- a/deskover-dashboard-website/src/app/components/button/button.component.html
+++ b/deskover-dashboard-website/src/app/components/button/button.component.html
@@ -1,6 +1,6 @@
 <button
     [type]="type"
-    class="btn btn-{{ color }} d-flex align-items-center justify-content-center"
+    class="btn btn-{{ color }} d-flex align-items-center justify-content-center rounded-pill"
     [ngClass]="{'btn-block': block}"
     [disabled]="disabled || loading"
 >
