--- a/deskover-dashboard-website/src/app/pages/category/subcategory/subcategory.component.html
+++ b/deskover-dashboard-website/src/app/pages/category/subcategory/subcategory.component.html
@@ -7,7 +7,8 @@
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
           <li class="breadcrumb-item">
-            <a class="text-decoration-none link-primary" [routerLink]="['/']" routerLinkActive="router-link-active">Trang chủ</a>
+            <a class="text-decoration-none link-primary" [routerLink]="['/']" routerLinkActive="router-link-active">Trang
+              chủ</a>
           </li>
           <li class="breadcrumb-item active">Danh mục sản phẩm</li>
         </ol>
@@ -23,35 +24,39 @@
           <div class="col-auto">
             <label for="filter-active" class="col-form-label">Trạng thái:</label>
           </div>
-          <div class="col-auto">
+          <div class="col-md-auto col-sm-12 mt-0 mt-md-2">
             <select id="filter-active" class="form-select" [(ngModel)]="isActive" (change)="filter()">
               <option [ngValue]="true">Hoạt động</option>
               <option [ngValue]="false">Chưa kích hoạt</option>
             </select>
           </div>
-          <div class="col-auto">
+          <div class="col-md-auto col-sm-12">
             <label for="filter-category" class="col-form-label">Danh mục cha:</label>
           </div>
-          <div class="col-auto">
+          <div class="col-md-auto col-sm-12 mt-0 mt-md-2">
             <select id="filter-category" class="form-select" [(ngModel)]="categoryId" (change)="filter()">
               <option [ngValue]="null">Tất cả</option>
               <option *ngFor="let category of categories" [ngValue]="category.id">{{category.name}}</option>
             </select>
           </div>
-          <div class="col d-flex align-items-center justify-content-end">
-            <button type="button" class="btn btn-sm bg-faded-accent" (click)="newSubcategory()" placement="left"
+          <div class="col d-flex align-items-center justify-content-center justify-content-md-end">
+            <button type="button" class="btn bg-faded-accent w-sm-100 rounded-pill" (click)="newSubcategory()"
+                    placement="left"
                     tooltip="Thêm">
-              <i class="fas fa-plus text-accent"></i>
+              <i class="fas fa-plus text-accent d-none d-md-inline-block"></i>
+              <span class="d-block text-accent d-inline-block d-md-none">Thêm danh mục</span>
             </button>
           </div>
         </div>
       </div>
 
       <div class="card-body p-3">
-        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-hover table-sm w-100">
-          <thead class="table-primary"></thead>
-          <tbody></tbody>
-        </table>
+        <div class="table-responsive">
+          <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-hover table-sm nowrap w-100">
+            <thead class="table-primary"></thead>
+            <tbody></tbody>
+          </table>
+        </div>
       </div>
     </div>
   </div>
