--- a/deskover-dashboard-website/src/app/modules/main/header/user/user.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/header/user/user.component.html
@@ -30,7 +30,7 @@
         <span>{{ user.fullname }}</span>
         <small>
           <span>Ngày đăng ký: &nbsp;</span>
-          <span>{{ formatDate(user.createdAt) }}</span>
+          <span>{{ formatDate(user.modifiedAt) }}</span>
         </small>
       </p>
     </li>
