--- a/deskover-dashboard-website/src/app/pages/brand/brand.component.html
+++ b/deskover-dashboard-website/src/app/pages/brand/brand.component.html
@@ -39,8 +39,8 @@
           </div>
         </div>
       </div>
-      <div class="card-body p-3">
-        <div class="table-responsive">
+      <div class="card-body p-0">
+        <div class="table-responsive p-3">
           <table datatable [dtOptions]="dtOptions" class="table table-hover table-sm nowrap w-100">
             <thead class="table-primary"></thead>
             <tbody></tbody>
