--- a/deskover-dashboard-website/src/app/pages/category/subcategory/subcategory.component.html
+++ b/deskover-dashboard-website/src/app/pages/category/subcategory/subcategory.component.html
@@ -50,8 +50,8 @@
         </div>
       </div>
 
-      <div class="card-body p-3">
-        <div class="table-responsive">
+      <div class="card-body p-0">
+        <div class="table-responsive p-3">
           <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-hover table-sm nowrap w-100">
             <thead class="table-primary"></thead>
             <tbody></tbody>
