--- a/deskover-ecommerce-website/src/main/resources/templates/account_profile.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/account_profile.html
@@ -6,7 +6,7 @@
     )}">
 
 <head>
-    <title>Deskover: Thông tin tài khoảng</title>
+    <title>Deskover: Account Profile</title>
 </head>
 
 <body id="content">
@@ -20,15 +20,15 @@
                 <div class="order-lg-2 mb-3 mb-lg-0 pt-lg-2">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb breadcrumb-light flex-lg-nowrap justify-content-center justify-content-lg-start">
-                            <li class="breadcrumb-item"><a class="text-nowrap" th:href="@{/index}"><i class="ci-home"></i>Trang chủ</a></li>
-                            <li class="breadcrumb-item text-nowrap"><a th:href="@{/account}">Tài khoản</a>
+                            <li class="breadcrumb-item"><a class="text-nowrap" th:href="@{/index}"><i class="ci-home"></i>Home</a></li>
+                            <li class="breadcrumb-item text-nowrap"><a th:href="@{/account}">Account</a>
                             </li>
-                            <li class="breadcrumb-item text-nowrap active" aria-current="page">Danh sách yêu thích</li>
+                            <li class="breadcrumb-item text-nowrap active" aria-current="page">WishLish</li>
                         </ol>
                     </nav>
                 </div>
                 <div class="order-lg-1 pe-lg-4 text-center text-lg-start">
-                    <h1 class="h3 text-light mb-0">Danh sách yêu thích</h1>
+                    <h1 class="h3 text-light mb-0">WishList</h1>
                 </div>
             </div>
         </div>
@@ -40,7 +40,7 @@
                 <section class="col-lg-8">
                     <!-- Toolbar-->
                     <div class="d-none d-lg-flex justify-content-between align-items-center pt-lg-3 pb-4 pb-lg-5 mb-lg-3">
-                        <h6 class="fs-base text-light mb-0">Update you profile details below:</h6><a class="btn btn-primary btn-sm" href="account-signin.html"><i class="ci-sign-out me-2"></i>Sign out</a>
+                        <h6 class="fs-base text-light mb-0">Update your profile details below:</h6><a class="btn btn-primary btn-sm" href="account-signin.html"><i class="ci-sign-out me-2"></i>Sign out</a>
                     </div>
                     <!-- Profile form-->
                     <form>
