--- a/deskover-ecommerce-website/src/main/resources/templates/components/footer.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/components/footer.html
@@ -70,80 +70,6 @@
         </div>
     </div>
     <div class="pt-5 bg-darker">
-        <div class="container">
-            <div class="row pb-3">
-                <div class="col-md-3 col-sm-6 mb-4">
-                    <div class="d-flex"><i class="ci-rocket text-primary" style="font-size: 2.25rem;"></i>
-                        <div class="ps-3">
-                            <h6 class="fs-base text-light mb-1">Fast and free delivery</h6>
-                            <p class="mb-0 fs-ms text-light opacity-50">Free delivery for all orders over $200</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 mb-4">
-                    <div class="d-flex"><i class="ci-currency-exchange text-primary" style="font-size: 2.25rem;"></i>
-                        <div class="ps-3">
-                            <h6 class="fs-base text-light mb-1">Money back guarantee</h6>
-                            <p class="mb-0 fs-ms text-light opacity-50">We return money within 30 days</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 mb-4">
-                    <div class="d-flex"><i class="ci-support text-primary" style="font-size: 2.25rem;"></i>
-                        <div class="ps-3">
-                            <h6 class="fs-base text-light mb-1">24/7 customer support</h6>
-                            <p class="mb-0 fs-ms text-light opacity-50">Friendly 24/7 customer support</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 mb-4">
-                    <div class="d-flex"><i class="ci-card text-primary" style="font-size: 2.25rem;"></i>
-                        <div class="ps-3">
-                            <h6 class="fs-base text-light mb-1">Secure online payment</h6>
-                            <p class="mb-0 fs-ms text-light opacity-50">We possess SSL / Secure сertificate</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <hr class="hr-light mb-5">
-            <div class="row pb-2">
-                <div class="col-md-6 text-center text-md-start mb-4">
-                    <div class="text-nowrap mb-4"><a class="d-inline-block align-middle mt-n1 me-3" href="#"><img class="d-block" src="img/footer-logo-light.png" width="117" alt="Cartzilla"></a>
-                        <div class="btn-group dropdown disable-autohide">
-                            <button class="btn btn-outline-light border-light btn-sm dropdown-toggle px-2" type="button" data-bs-toggle="dropdown"><img class="me-2" src="img/flags/en.png" width="20" alt="English">Eng / $</button>
-                            <ul class="dropdown-menu my-1">
-                                <li class="dropdown-item">
-                                    <select class="form-select form-select-sm">
-                    <option value="usd">$ USD</option>
-                    <option value="eur">€ EUR</option>
-                    <option value="ukp">£ UKP</option>
-                    <option value="jpy">¥ JPY</option>
-                  </select>
-                                </li>
-                                <li><a class="dropdown-item pb-1" href="#"><img class="me-2" src="img/flags/fr.png" width="20" alt="Français">Français</a></li>
-                                <li><a class="dropdown-item pb-1" href="#"><img class="me-2" src="img/flags/de.png" width="20" alt="Deutsch">Deutsch</a></li>
-                                <li><a class="dropdown-item" href="#"><img class="me-2" src="img/flags/it.png" width="20" alt="Italiano">Italiano</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="widget widget-links widget-light">
-                        <ul class="widget-list d-flex flex-wrap justify-content-center justify-content-md-start">
-                            <li class="widget-list-item me-4"><a class="widget-list-link" href="#">Outlets</a></li>
-                            <li class="widget-list-item me-4"><a class="widget-list-link" href="#">Affiliates</a></li>
-                            <li class="widget-list-item me-4"><a class="widget-list-link" href="#">Support</a></li>
-                            <li class="widget-list-item me-4"><a class="widget-list-link" href="#">Privacy</a></li>
-                            <li class="widget-list-item me-4"><a class="widget-list-link" href="#">Terms of use</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-6 text-center text-md-end mb-4">
-                    <div class="mb-3"><a class="btn-social bs-light bs-twitter ms-2 mb-2" href="#"><i class="ci-twitter"></i></a><a class="btn-social bs-light bs-facebook ms-2 mb-2" href="#"><i class="ci-facebook"></i></a><a class="btn-social bs-light bs-instagram ms-2 mb-2"
-                            href="#"><i class="ci-instagram"></i></a><a class="btn-social bs-light bs-pinterest ms-2 mb-2" href="#"><i class="ci-pinterest"></i></a><a class="btn-social bs-light bs-youtube ms-2 mb-2" href="#"><i class="ci-youtube"></i></a></div>
-                    <img
-                        class="d-inline-block" src="img/cards-alt.png" width="187" alt="Payment methods">
-                </div>
-            </div>
-            <div class="pb-4 fs-xs text-light opacity-50 text-center text-md-start">© All rights reserved. Made by <a class="text-light" href="https://createx.studio/" target="_blank" rel="noopener">Createx Studio</a></div>
-        </div>
+            <div class="pb-4 fs-xs text-light opacity-50 text-center text-md-start text-center">© All rights reserved. Made by <a class="text-light" href="https://createx.studio/" target="_blank" rel="noopener">Createx Studio</a></div>
     </div>
 </footer>
