--- a/deskover-dashboard-website/src/app/components/menu-item/menu-item.component.html
+++ b/deskover-dashboard-website/src/app/components/menu-item/menu-item.component.html
@@ -1,27 +1,27 @@
 <div class="nav-header" *ngIf="menuItem.header">{{ menuItem.header }}</div>
 <a
-    (click)="handleMainMenuAction()"
-    class="nav-link"
-    [ngClass]="{active: isMainActive || isOneOfChildrenActive}"
+  (click)="handleMainMenuAction()"
+  class="nav-link"
+  [ngClass]="{active: isMainActive || isOneOfChildrenActive}"
 >
-    <i class="nav-icon {{ menuItem.icon }}"></i>
-    <p>
-        {{ menuItem.name }}
-        <i
-            *ngIf="isExpandable && menuItem.children.length > 0"
-            class="right fas fa-angle-left"
-        ></i>
-    </p>
+  <i class="nav-icon {{ menuItem.iconClasses }}"></i>
+  <p>{{ menuItem.name }}
+    <i
+      *ngIf="isExpandable && menuItem.children.length > 0"
+      class="right fas fa-angle-right"
+      [@rotate]="isMenuExtended"
+    ></i>
+  </p>
 </a>
-<ul class="nav nav-treeview" *ngFor="let item of menuItem.children">
-    <li class="nav-item">
-        <a
-            [routerLink]="item.path"
-            [routerLinkActive]="'active'"
-            class="nav-link"
-        >
-            <i class="far fa-circle nav-icon"></i>
-            <p>{{ item.name }}</p>
-        </a>
-    </li>
+<ul class="nav nav-treeview" *ngFor="let item of menuItem.children" [@openClose]="isMenuExtended">
+  <li class="nav-item">
+    <a
+      [routerLink]="item.path"
+      [routerLinkActive]="'active'"
+      class="nav-link"
+    >
+      <i class="nav-icon {{ item.iconClasses }}"></i>
+      <p>{{ item.name }}</p>
+    </a>
+  </li>
 </ul>
