--- a/deskover-dashboard-website/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
@@ -1,5 +1,5 @@
 <!-- Brand Logo -->
-<a [routerLink]="['/']" class="brand-link text-decoration-none">
+<a [routerLink]="['/']" class="brand-link">
     <img
         src="assets/images/logo/logo-icon.png"
         alt="Deskover"
