--- a/deskover-dashboard-website/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
@@ -13,8 +13,8 @@
 
 <!-- Sidebar -->
 <div class="sidebar">
-    <!-- Sidebar user (optional) -->
-    <!--<div class="user-panel mt-3 pb-3 mb-3 d-flex">
+   <!--  Sidebar user (optional)
+    <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
             <img
                 [src]="'assets/images/avatar/default-profile.png'"
@@ -23,12 +23,12 @@
             />
         </div>
         <div class="info">
-            &lt;!&ndash; [routerLink]="['/profile']" &ndash;&gt;
+            &lt;!&ndash; [routerLink]="['/profile']"
             <a class="d-block">
                 Xin chào, {{ user.username }}
             </a>
         </div>
-    </div>-->
+    </div>&ndash;&gt;-->
 
     <!-- Sidebar Menu -->
     <nav class="mt-2" style="overflow-y: hidden">
