--- a/deskover-dashboard-website/src/app/modules/main/control-sidebar/control-sidebar.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/control-sidebar/control-sidebar.component.html
@@ -1,4 +1,4 @@
-<h5>Customize Dashboard</h5>
+<h5>Deskover Dashboard</h5>
 <hr class="mb-2" />
 <div style="padding: 8px 0">
     <app-checkbox (valueChange)="handleDarkModeChange($event)">
