--- a/deskover-dashboard-website/src/app/pages/category/category.component.html
+++ b/deskover-dashboard-website/src/app/pages/category/category.component.html
@@ -102,7 +102,7 @@
 <!-- Modal -->
 <ng-template #categoryModal let-c="close" let-d="dismiss">
   <div class="modal-header">
-    <h4 class="modal-title text-danger" id="modal-basic-title">
+    <h4 class="modal-title text-primary" id="modal-basic-title">
       {{ isEdit ? 'Cập nhật' : 'Thêm' }} danh mục
     </h4>
     <button
@@ -158,7 +158,7 @@
   </div>
   <div class="modal-footer">
     <button type="button"
-            class="btn btn-outline-danger"
+            class="btn btn-outline-primary"
             (click)="saveCategory(category); c('Save click')"
             [disabled]="categoryForm.invalid">
       Lưu
