--- a/deskover-dashboard-website/src/app/pages/promotion/promotion.component.html
+++ b/deskover-dashboard-website/src/app/pages/promotion/promotion.component.html
@@ -63,18 +63,23 @@
     <ul ngbNav #nav="ngbNav" class="nav-tabs">
       <li ngbNavItem>
         <a ngbNavLink>Tất cả sản phẩm</a>
-        <ng-template ngbNavContent class="p-0">
-          <div class="table-responsive p-1 mt-2">
-            <table datatable [dtOptions]="dtProductOptions" class="table table-hover table-sm nowrap w-100">
-              <thead class="table-primary"></thead>
-              <tbody></tbody>
-            </table>
-          </div>
+        <ng-template ngbNavContent>
+            <div class="table-responsive pt-3">
+              <table datatable [dtOptions]="dtAllProductOptions" class="table table-hover table-sm w-100">
+                <thead class="table-primary"></thead>
+                <tbody></tbody>
+              </table>
+            </div>
         </ng-template>
       </li>
       <li ngbNavItem>
         <a ngbNavLink>Sản phẩm khuyến mãi</a>
-        <ng-template ngbNavContent>Second content</ng-template>
+        <ng-template ngbNavContent>
+          <table datatable [dtOptions]="dtDiscountProductOptions" class="table table-hover table-sm w-100">
+            <thead class="table-primary"></thead>
+            <tbody></tbody>
+          </table>
+        </ng-template>
       </li>
     </ul>
     <div [ngbNavOutlet]="nav"></div>
